--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the questons controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.formask{
+  margin-right: -3px;
+  width: 212px;
+  height: 36px;
+  border-radius: 5px;
+}
