--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,2 +1,6 @@
 <h1>Questions#ask</h1>
 <p>Find me in app/views/questions/ask.html.erb</p>
+<form action="/answer" methode="get" >
+  <input type="text" name="question" class="formask">
+  <input type="submit" value="Ask!" class="btn btn-primary">
+</form>
